# Diploma

./: .gitignore  ascii_output.txt  iot_lab_data.db
iot_lab_project/: .env  iot_lab_data.db  main.py  prob.py  pstructure.py  pyproject.toml
iot_lab_project/core/: logger.py  permissions.py
iot_lab_project/core/adapters/: api_adapter.py  base_adapter.py  ha_adapter.py
iot_lab_project/core/api/: __init__.py  api_client.py  api_worker.py
iot_lab_project/core/booking/: __init__.py  booking_manager.py  booking_worker.py
iot_lab_project/core/ha/: device_manager.py  entity_manager.py  rest_client.py  ws_client.py
iot_lab_project/core/workers/: base_worker.py  connection_worker.py  device_loader.py  state_loader.py
iot_lab_project/db/: connection_db.py  init_db.py  users_db.py
iot_lab_project/resources/: ha_connections.db  iot_lab_data.db  resources_rc.py  resources_rc.qrc  style.qss
iot_lab_project/src/: config.py  main.py
iot_lab_project/src/core/: connection_worker.py  db_manager.py  device_loader.py  device_manager.py  entity_manager.py  ws_client.py
iot_lab_project/src/resources/: ha_connections.db  iot_lab_data.db  resources_rc.p  resources_rc.py  resources_rc.qrc  style.qss
iot_lab_project/src/ui/: connection_settings_ui.py  connection_settings_window.py  device_card.py  main_ui.py  main_ui.ui  resources_rc.py
iot_lab_project/src/utils/: logger.py
iot_lab_project/ui/Main/: main_ui.py  main_ui.ui  main_window.py
iot_lab_project/ui/dialogs/: automation_dialog.py  booking_dialog.py  connection_dialog.py  device_dialog.py  login_dialog.py  (+2 more)
(+83 files in other folders)
